{
    "name": "InputSystem",
    "maps": [
        {
            "name": "SpaceShip",
            "id": "8e5a551d-9c31-4aed-aae1-6eaa268e91c4",
            "actions": [
                {
                    "name": "PowerUp",
                    "type": "Value",
                    "id": "9a769eb0-0605-4fa1-9d22-807e5480cd2c",
                    "expectedControlType": "Double",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RotationLeft",
                    "type": "Value",
                    "id": "eeea47b4-3b03-47e4-9d7c-5c695e721a28",
                    "expectedControlType": "Double",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RotationRight",
                    "type": "Value",
                    "id": "25aa4678-b04c-4047-938c-5b65709c0af6",
                    "expectedControlType": "Double",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SimpleShoot",
                    "type": "Value",
                    "id": "d0d5cef0-7c89-4356-bf99-f15d33a5c647",
                    "expectedControlType": "Double",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "35cf7884-58bf-490a-9ad0-879e54c17d63",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PowerUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7fd40124-fa29-4a95-8b5a-fa0d8c2ef5cc",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotationLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c0d33f8a-9ccd-4b82-adbd-9d3aff9f326c",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotationRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a97ff6a5-fb66-4055-9e87-6734fbf3ad93",
                    "path": "<Keyboard>/j",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SimpleShoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}